# don't run test_thumbnail.sh by default, it takes ages
TESTS = \
	test_cli.sh \
	test_formats.sh \
	test_seq.sh \
	test_threading.sh 

SUBDIRS = \
	test-suite 

EXTRA_DIST = \
	variables.sh.in \
	test_cli.sh \
	test_formats.sh \
	test_seq.sh \
	test_thumbnail.sh \
	test_threading.sh 

clean-local: 
	-rm -rf tmp-*

